[tool.black]
line-length = 100
target-version = ["py310"]
exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
  | cpp
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
